[package]
name = "hestia"
version = "1.7.0-alpha"
authors = ["Henry Nugraha"]
edition = "2024"

# Removing from watchlist
exclude = [
    "TO.DO",
    "README.md",
    "CHANGELOG.md",
    "installer.iss",
    "manifest.json"
]

[package.metadata.winres]
windows_subsystem = "windows"

[build-dependencies]
winres = "0.1"

[dependencies]
ab_glyph = "0.2"
anyhow = "1.0"
arboard = "3.6"
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
ed25519-dalek = "2.2"
eframe = "0.33"
egui = "0.33"
egui_commonmark = { version = "0.22", default-features = false }
egui_extras = { version = "0.33", features = ["image", "http", "gif"] }
html2md = "0.2"
image = "0.25"
rfd = "0.17"
regex = "1.12"
rpassword = "7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
sevenz-rust = "0.6"
shlex = "2.0"
sha2 = "0.11"
self-replace = "1.5"
tempfile = "3.27"
trash = "5"
unrar = "0.5"
uuid = { version = "1.23", features = ["v4", "serde"] }
walkdir = "2.5"
lucide-icons = "1.19.0"
zip = "8.6"
raw-window-handle = "0.6"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls", "socks", "stream"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "fs", "time", "io-util"] }
rayon = "1.12"
memmap2 = "0.9"
fast_image_resize = "6.0"
zune-jpeg = "0.5"
zune-png = "0.5"
lru = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
mimalloc = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
toml = "1.1"
filetime = "0.2"
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
futures-util = "0.3"
once_cell = "1.21"
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "22.0.0"
rusqlite = { version = "0.40", features = ["bundled"] }
sysinfo = "0.39"
sys-locale = "0.3.2"
url = "2.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Globalization", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_Console", "Win32_System_Registry", "Win32_System_SystemInformation", "Win32_System_Threading"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
